--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,14 +2,12 @@ name: Go
 
 on:
   push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
 
 jobs:
 
   build:
-    name: Build
+    name: Build, test, and vet
     runs-on: ubuntu-latest
     steps:
 
@@ -24,13 +22,12 @@ jobs:
     - name: Get dependencies
       run: |
         go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
 
     - name: Build
       run: go build -v ./...
 
     - name: Test
       run: go test -v ./...
+
+    - name: Vet
+      run: go vet -v ./...
